--- a/projects/2.3.1-PMR/2.3.1.17-OMPI-X/2.3.1.17-OMPI-X.tex
+++ b/projects/2.3.1-PMR/2.3.1.17-OMPI-X/2.3.1.17-OMPI-X.tex
@@ -71,7 +71,7 @@ environment, how code running on the GPUs interacts with MPI and inter-process
 communications must also be addressed.  This will require both changes to the standard 
 and changes and improvements within implementations.
 %
-Performance and scalability become more both more important and more 
+Performance and scalability become both more important and more
 challenging as node counts increase
 and memory per node trends downward.
 %
@@ -160,17 +160,19 @@ formal adoption by November 2020.  A number of error management and recovery fea
 championed by the OMPI-X team have already been formally voted into 4.0.  The Sessions proposal,
 also driven significantly by OMPI-X is considered a mandatory feature for 4.0.  And it is considered extremely likely that Partitioned Communications, led by OMPI-X and EPCC, will also make version 4.0.
 In the longer-term discussions, OMPI-X is also championing the ``ReInit'' proposal for simplified checkpoint/restart application recovery and is actively engaged on other topics relevant to
-exsacle, including MPI\_T events, enhanced hardware topologies, thread safety enhancements, half-precision datatypes, and a replacemnt for the PMPI interface.  ECP (mini-) applications which have been used in demonstrating various features and capabilities include: AMG, CoMD, LULESH, miniFE, miniMD, NWChemEx, and SimpleMOC.
+exsacle, including MPI\_T events, enhanced hardware topologies, thread safety enhancements, half-precision datatypes, and a replacement for the PMPI interface.  ECP (mini-) applications which have been used in demonstrating various features and capabilities include: AMG, CoMD, LULESH, miniFE, miniMD, NWChemEx, and SimpleMOC.
 
-Motivated largely by support for the Partitioned Communications proposal and other situations where high necwork concurrency is required, a general user-level threading abstraction has been developed support both the Qthreads and BOLT/Argobots threading libraries within either the Open MPI or MPICH libraries.  This work, which has been carried out in collaboration with the MPICH and Argobots ECP teams (WBS 2.3.1.07 and 2.3.5.05), and is in the process of being integrated into the two MPI implementations.
+Motivated largely by support for the Partitioned Communications proposal and other situations where high network concurrency is required, a general user-level threading abstraction has been developed to support both the Qthreads and BOLT/Argobots threading libraries within either the Open MPI or MPICH libraries.  This work has been carried out in collaboration with the MPICH and Argobots ECP teams (WBS 2.3.1.07 and 2.3.5.05), and is in the process of being integrated into the two MPI implementations.
 
-To provide better long-term support for resilience, a number of fault detection and coordination features have been refactored out of Open MPI and moved into the PMIx implementation, where they can benefit other runtimes and tools that use PMIx.  The OMPI-X team has also played an active role in helping the PMIx community grow and formalize its processes within the last year.  This includes separating the standard from the reference implementation, and establishing and documenting governance procedures for both.  This will allow the PMIx community to better deal with the strong uptick in interest and actual and potential PMIx clients recently.
+To provide better long-term support for resilience, a number of fault detection and coordination features have been refactored out of Open MPI and moved into the PMIx implementation, where they can benefit other runtimes and tools that use PMIx.  The OMPI-X team has also played an active role in helping the PMIx community grow and formalize its processes within the last year.  This includes separating the standard from the reference implementation, and establishing and documenting governance procedures for both.
+%This will allow the PMIx community to better deal with the strong uptick in interest and actual and potential PMIx clients recently.
+This will allow the PMIx community to better support new users of PMIx, which has had a strong uptick in interest recently.
 
 Two areas of progress on supporting exacale-relevant architectures include complex memory and topology/congestion awareness withn the MPI library. In collaboration with the ECP SICM project (WBS 2.3.1.16), we are integrating support for complex memory architectures into Open MPI.  This will enable controlled placement of data objects within different memory spaces according to affinity and/or performance characteristics.  The ability to detect and adapt to network topology and traffic patterns is also a valuable capability to facilitate application performance which has been prototyped within Open MPI.
 
 In support of better ``MPI+X'' interoperability, we have demonstrated fined-grained control of thread and process placement in the context of OpenMP and Open MPI, in collaboration with the SOLLVE ECP project (WBS 2.3.2.11). Such a capability is crucial to the ability of MPI+X applications to effectively utilize current and future ``fat'' node architectures (with extensive compute capabilities), but can be hard or impossible to achieve unless the two runtimes are made aware of each other and (minimally) cooperate on resource management.
 
-Because poor performance with threading is one of the most common complaints against (any) MPI implementations, a great deal of our recent effort has been devoted to improving this in various ways within Open MPI.  We have redesigned point-to-point and remote memory access request management, and redesigned the progress engine for better performance with threads.  The Partitioned Communications proposal, mentioned above also targets threaded execution by increasing opportunities for fine-grained overlap of computation with communication and reduced locking.  We have also imrpvode the message matching implementation so support faster message rates and high thread counts.
+Because poor performance with threading is one of the most common complaints against (any) MPI implementations, a great deal of our recent effort has been devoted to improving this in various ways within Open MPI.  We have redesigned point-to-point and remote memory access request management, and redesigned the progress engine for better performance with threads.  The Partitioned Communications proposal, mentioned above also targets threaded execution by increasing opportunities for fine-grained overlap of computation with communication and reduced locking.  We have also improved the message matching implementation to support faster message rates and high thread counts.
 
 Finally, we continue to extend the testing infrastructure for Open MPI and related products, increasing the platforms on which testing is implemented, and expanding the repertoire of tests.  We have enhanced the MTT tool used for testing of Open MPI itself, and supplemented it with a new tool aimed at testing of application kernels and performance testing.  We have deployed testing capabilities on Summit, and are also testing on Cori.
 
