--- a/projects/2.3.1-PMR/2.3.1.17-OMPI-X/2.3.1.17-OMPI-X.tex
+++ b/projects/2.3.1-PMR/2.3.1.17-OMPI-X/2.3.1.17-OMPI-X.tex
@@ -151,6 +151,29 @@ Open~MPI testing infrastructure, adding tests to reflect ECP
 requirements, and instantiating routine testing on systems of
 importance to ECP, both for correctness and performance.
 
+\begin{figure}
+\centering
+\begin{minipage}[c]{0.20\textwidth}
+\captionsetup{width=\textwidth,font=small,labelfont=bf} %% Need to override default width
+\caption{ReInit reduces the time for applications to recover from faults using checkpoints.}
+\label{fig:reinit}
+\end{minipage}
+\qquad
+\begin{minipage}[c]{0.20\textwidth}
+\includegraphics[width=\textwidth]{projects/2.3.1-PMR/2.3.1.17-OMPI-X/partitioned-communications-partial-sends.png}
+\end{minipage}
+\qquad
+\begin{minipage}[c]{0.33\textwidth}
+\includegraphics[width=\textwidth]{projects/2.3.1-PMR/2.3.1.17-OMPI-X/partitioned-communications-early-receive.png}
+\end{minipage}
+\end{figure}
+
+\begin{wrapfigure}{r}{0.40\textwidth}
+\includegraphics[width=0.40\textwidth]{projects/2.3.1-PMR/2.3.1.17-OMPI-X/reinit.png}
+\caption{ReInit reduces application recovery time.}
+\label{fig:reinit}
+\end{wrapfigure}
+
 \paragraph{Recent Progress}
 %% \textit{Describe what you have done recently.  It would be good to
 %% have some kind of figure or diagram in this section.}
@@ -158,50 +181,50 @@ There has been a great deal of activity within the MPI standards community recen
 as they work to finalize the feature set for MPI 4.0 by December 2019 and
 formal adoption by November 2020.  A number of error management and recovery features
 championed by the OMPI-X team have already been formally voted into 4.0.  The Sessions proposal,
-also driven significantly by OMPI-X is considered a mandatory feature for 4.0.  And it is considered extremely likely that Partitioned Communications, led by OMPI-X and EPCC, will also make version 4.0.
-In the longer-term discussions, OMPI-X is also championing the ``ReInit'' proposal for simplified checkpoint/restart application recovery and is actively engaged on other topics relevant to
+also driven significantly by OMPI-X is considered a mandatory feature
+for 4.0.  And it is considered extremely likely that Partitioned
+Communications (Figure~\ref{fig:partitioned-communications}), led by
+OMPI-X, will also make version 4.0. 
+In the longer-term discussions, OMPI-X is also championing the
+``ReInit'' proposal for simplified checkpoint/restart application
+recovery (Figure~\ref{fig:reinit}) and is actively engaged on other topics relevant to
 exascale, including MPI\_T events, enhanced hardware topologies, thread safety enhancements, half-precision datatypes, and a replacement for the PMPI interface.  ECP (mini-) applications which have been used in demonstrating various features and capabilities include: AMG, CoMD, LULESH, miniFE, miniMD, NWChemEx, and SimpleMOC.
 
 Motivated largely by support for the Partitioned Communications proposal and other situations where high network concurrency is required, a general user-level threading abstraction has been developed to support both the Qthreads and BOLT/Argobots threading libraries within either the Open~MPI or MPICH libraries.  This work, carried out in collaboration with the MPICH and Argobots ECP teams (WBS 2.3.1.07 and 2.3.5.05) is in the process of being integrated into the two MPI implementations.
 
-To provide better long-term support for resilience, a number of fault detection and coordination features have been refactored out of Open~MPI and moved into the PMIx implementation, where they can benefit to a larger community of programming models , including all other runtimes and tools that use PMIx.  The OMPI-X team has also played an active role in helping the PMIx community grow and formalize its processes within the last year.  This includes separating the standard from the reference implementation, and establishing and documenting governance procedures for both.  This will allow the PMIx community to better deal with the strong uptick in interest and actual and potential PMIx clients recently.
+To provide better long-term support for resilience, a number of fault detection and coordination features have been refactored out of Open~MPI and moved into the PMIx implementation, where they can benefit to a larger community of programming models, including all other runtimes and tools that use PMIx.  The OMPI-X team has also played an active role in helping the PMIx community grow and formalize its processes within the last year.  This includes separating the standard from the reference implementation, and establishing and documenting governance procedures for both.  This will allow the PMIx community to better deal with the strong uptick in interest and actual and potential PMIx clients recently.
 
 Two areas of progress on supporting exacale-relevant architectures include complex memory and topology/congestion awareness within the MPI library. In collaboration with the ECP SICM project (WBS 2.3.1.16), we are integrating support for complex memory architectures into Open~MPI.  This will enable controlled placement of data objects within different memory spaces according to affinity and/or performance characteristics.  The ability to detect and adapt to network topology and traffic patterns is also a valuable capability to facilitate application performance which has been prototyped within Open~MPI.
 
 In support of better ``MPI+X'' interoperability, we have redesigned the internal Open~MPI infrastructure to minimize contention on the execution path of independent MPI operations and optimize the handling of MPI requests, drastically improving the communication, point-to-point, RMA and collective, performance of Open~MPI in threaded contexts. In addition the progress engine has been reimplemented to maximize the opportunity for computation/communication overlap, and provide a guarantee for asynchronous progress when possible. Using these capabilities we also demonstrated fined-grained control of thread and process placement in the context of OpenMP and Open~MPI, in collaboration with the SOLLVE ECP project (WBS 2.3.2.11). Such a capability is crucial to the ability of MPI+X applications to effectively utilize current and future ``fat'' node architectures (with extensive compute capabilities), but can be hard or impossible to achieve unless the two runtimes are made aware of each other and (minimally) cooperate on resource management.
 %
-% Because poor performance with threading is one of the most common complaints against (any) MPI implementations, a great deal of our recent effort has been devoted to improving this in various ways within Open~MPI.  We have redesigned point-to-point and remote memory access request management, and redesigned the progress engine for better performance with threads.
+Because poor performance with threading is one of the most common
+complaints against (any) MPI implementations, a great deal of our
+recent effort has been devoted to improving this in various ways
+within Open~MPI.  We have redesigned point-to-point and remote
+memory access request management, and redesigned the progress engine
+for better performance with threads (Figure~\ref{fig:thread}).
 Moreover, the Partitioned Communications proposal, mentioned above also targets threaded execution by increasing opportunities for fine-grained overlap of computation with communication and reduced locking.  We have also improved the message matching implementation so support faster message rates and high thread counts.
 
+\begin{figure}
+\centering
+\begin{minipage}[c]{0.2\textwidth}
+\captionsetup{width=\textwidth,font=small,labelfont=bf} %% Need to override default width
+\caption{Performance of point-to-point (left) and remote memory access
+(right) communication with threading.} 
+\label{fig:threading-performance}
+\end{minipage}
+\qquad
+\begin{minipage}[c]{0.2\textwidth}
+\includegraphics[width=\textwidth]{projects/2.3.1-PMR/2.3.1.17-OMPI-X/p2p-threading-performance.png}
+\end{minipage}
+\qquad
+\begin{minipage}[c]{0.5\textwidth}
+\includegraphics[width=\textwidth]{projects/2.3.1-PMR/2.3.1.17-OMPI-X/rma-threading-performance.png}
+\end{minipage}
+\end{figure}
+
 Finally, we continue to extend the testing infrastructure for Open~MPI and related products, increasing the platforms on which testing is implemented, and expanding the repertoire of tests.  We have enhanced the MTT tool used for testing of Open~MPI itself, and supplemented it with a new tool aimed at testing of application kernels and performance testing.  We have deployed testing capabilities on Summit, and are also testing on Cori.
-
-%% \begin{wrapfigure}{r}{4in}
-%% \begin{minipage}[c]{2in}
-%% \vspace{0pt}
-%% \includegraphics[width=\textwidth]{projects/2.3.1-PMR/2.3.1.11-OMPI-X/pritchard-rma-mt-put-rate.png}
-%% \end{minipage}
-%% \begin{minipage}[c]{2in}
-%% \vspace{0pt}
-%% \includegraphics[width=\textwidth]{projects/2.3.1-PMR/2.3.1.11-OMPI-X/pritchard-rma-mt-get-rate.png}
-%% \end{minipage}
-%% \caption{Comparison of put (left) and get (right) RMA performance in a
-%% multi-threaded context for Open~MPI.  Recent OMPI-X contributions are
-%% reflected in version 4.0.0a1 (top group of lines), in comparison with
-%% v2.1.3.}
-%% \label{fig:ompix-rma}
-%% \end{wrapfigure}
-
-%% \begin{figure}[htb]
-%% 	\centering
-%% 	\includegraphics[width=6in]{projects/2.3.1-PMR/2.3.1.17-OMPI-X/FinePointsBW-QtOmp.pdf}
-%% 	\caption{\label{fig:qthreads-finepoints-graph}This graph shows the
-%% performance of Qthreads and OpenMP paired with the FinePoints library for
-%% multithreaded MPI.  The x-axis varies the buffer sizes transferred in each
-%% experiment in the series, and the y-axis shows the network bandwidth
-%% achieved.  The similar performance of Qthreads and OpenMP justifies
-%% use if the former as a suitable proxy for the latter, with the advantage
-%% of flexibility for rapid prototyping of new runtime system techniques.}
-%% \end{figure}
 
 
 \paragraph{Next Steps}
